// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<PictureItem /> puts a dash when there is no title 1`] = `
ShallowWrapper {
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <PictureItem
    onSelect={[Function]}
    picture={
        Object {
            "farm": 2,
            "href": "https://www.flickr.com/photos/166588675@N05/44592167171/",
            "id": "44592167171",
            "isfamily": 0,
            "isfriend": 0,
            "ispublic": 1,
            "owner": "166588675@N05",
            "ownername": "OldenCam3",
            "secret": "144e4f8561",
            "server": "1848",
            "src": "https://farm2.staticflickr.com/1848/44592167171_144e4f8561.jpg",
            "tags": "",
            "title": undefined,
          }
    }
/>,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateError": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "host",
    "props": Object {
      "children": Array [
        <div
          className="header"
>
          <div
                    className="title"
          >
                    -
          </div>
          <div
                    className="description"
          >
                    by 
                    <a
                              href="https://www.flickr.com/photos/166588675@N05/44592167171/"
                              target="_blank"
                    >
                              OldenCam3
                    </a>
          </div>
</div>,
        <ImageLoader
          src="https://farm2.staticflickr.com/1848/44592167171_144e4f8561.jpg"
>
          <PictureItemImage
                    onClick={[Function]}
          />
          <PictureItemImage>
                    Error
          </PictureItemImage>
          <PictureItemImage>
                    <m
                              color="#fff"
                              duration={1.8}
                              size="4"
                    />
          </PictureItemImage>
</ImageLoader>,
      ],
      "className": "container",
    },
    "ref": null,
    "rendered": Array [
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "host",
        "props": Object {
          "children": Array [
            <div
              className="title"
>
              -
</div>,
            <div
              className="description"
>
              by 
              <a
                            href="https://www.flickr.com/photos/166588675@N05/44592167171/"
                            target="_blank"
              >
                            OldenCam3
              </a>
</div>,
          ],
          "className": "header",
        },
        "ref": null,
        "rendered": Array [
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "children": "-",
              "className": "title",
            },
            "ref": null,
            "rendered": "-",
            "type": "div",
          },
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "children": Array [
                "by ",
                <a
                  href="https://www.flickr.com/photos/166588675@N05/44592167171/"
                  target="_blank"
>
                  OldenCam3
</a>,
              ],
              "className": "description",
            },
            "ref": null,
            "rendered": Array [
              "by ",
              Object {
                "instance": null,
                "key": undefined,
                "nodeType": "host",
                "props": Object {
                  "children": "OldenCam3",
                  "href": "https://www.flickr.com/photos/166588675@N05/44592167171/",
                  "target": "_blank",
                },
                "ref": null,
                "rendered": "OldenCam3",
                "type": "a",
              },
            ],
            "type": "div",
          },
        ],
        "type": "div",
      },
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "class",
        "props": Object {
          "children": Array [
            <PictureItemImage
              onClick={[Function]}
/>,
            <PictureItemImage>
              Error
</PictureItemImage>,
            <PictureItemImage>
              <m
                            color="#fff"
                            duration={1.8}
                            size="4"
              />
</PictureItemImage>,
          ],
          "src": "https://farm2.staticflickr.com/1848/44592167171_144e4f8561.jpg",
        },
        "ref": null,
        "rendered": Array [
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "function",
            "props": Object {
              "onClick": [Function],
            },
            "ref": null,
            "rendered": null,
            "type": [Function],
          },
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "function",
            "props": Object {
              "children": "Error",
            },
            "ref": null,
            "rendered": "Error",
            "type": [Function],
          },
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "function",
            "props": Object {
              "children": <m
                color="#fff"
                duration={1.8}
                size="4"
/>,
            },
            "ref": null,
            "rendered": Object {
              "instance": null,
              "key": undefined,
              "nodeType": "function",
              "props": Object {
                "color": "#fff",
                "duration": 1.8,
                "size": "4",
              },
              "ref": null,
              "rendered": null,
              "type": [Function],
            },
            "type": [Function],
          },
        ],
        "type": [Function],
      },
    ],
    "type": "div",
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "host",
      "props": Object {
        "children": Array [
          <div
            className="header"
>
            <div
                        className="title"
            >
                        -
            </div>
            <div
                        className="description"
            >
                        by 
                        <a
                                    href="https://www.flickr.com/photos/166588675@N05/44592167171/"
                                    target="_blank"
                        >
                                    OldenCam3
                        </a>
            </div>
</div>,
          <ImageLoader
            src="https://farm2.staticflickr.com/1848/44592167171_144e4f8561.jpg"
>
            <PictureItemImage
                        onClick={[Function]}
            />
            <PictureItemImage>
                        Error
            </PictureItemImage>
            <PictureItemImage>
                        <m
                                    color="#fff"
                                    duration={1.8}
                                    size="4"
                        />
            </PictureItemImage>
</ImageLoader>,
        ],
        "className": "container",
      },
      "ref": null,
      "rendered": Array [
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "children": Array [
              <div
                className="title"
>
                -
</div>,
              <div
                className="description"
>
                by 
                <a
                                href="https://www.flickr.com/photos/166588675@N05/44592167171/"
                                target="_blank"
                >
                                OldenCam3
                </a>
</div>,
            ],
            "className": "header",
          },
          "ref": null,
          "rendered": Array [
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "host",
              "props": Object {
                "children": "-",
                "className": "title",
              },
              "ref": null,
              "rendered": "-",
              "type": "div",
            },
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "host",
              "props": Object {
                "children": Array [
                  "by ",
                  <a
                    href="https://www.flickr.com/photos/166588675@N05/44592167171/"
                    target="_blank"
>
                    OldenCam3
</a>,
                ],
                "className": "description",
              },
              "ref": null,
              "rendered": Array [
                "by ",
                Object {
                  "instance": null,
                  "key": undefined,
                  "nodeType": "host",
                  "props": Object {
                    "children": "OldenCam3",
                    "href": "https://www.flickr.com/photos/166588675@N05/44592167171/",
                    "target": "_blank",
                  },
                  "ref": null,
                  "rendered": "OldenCam3",
                  "type": "a",
                },
              ],
              "type": "div",
            },
          ],
          "type": "div",
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "class",
          "props": Object {
            "children": Array [
              <PictureItemImage
                onClick={[Function]}
/>,
              <PictureItemImage>
                Error
</PictureItemImage>,
              <PictureItemImage>
                <m
                                color="#fff"
                                duration={1.8}
                                size="4"
                />
</PictureItemImage>,
            ],
            "src": "https://farm2.staticflickr.com/1848/44592167171_144e4f8561.jpg",
          },
          "ref": null,
          "rendered": Array [
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "function",
              "props": Object {
                "onClick": [Function],
              },
              "ref": null,
              "rendered": null,
              "type": [Function],
            },
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "function",
              "props": Object {
                "children": "Error",
              },
              "ref": null,
              "rendered": "Error",
              "type": [Function],
            },
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "function",
              "props": Object {
                "children": <m
                  color="#fff"
                  duration={1.8}
                  size="4"
/>,
              },
              "ref": null,
              "rendered": Object {
                "instance": null,
                "key": undefined,
                "nodeType": "function",
                "props": Object {
                  "color": "#fff",
                  "duration": 1.8,
                  "size": "4",
                },
                "ref": null,
                "rendered": null,
                "type": [Function],
              },
              "type": [Function],
            },
          ],
          "type": [Function],
        },
      ],
      "type": "div",
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
        "lifecycles": Object {
          "componentDidUpdate": Object {
            "onSetState": true,
          },
          "getDerivedStateFromProps": true,
          "getSnapshotBeforeUpdate": true,
          "setState": Object {
            "skipsComponentDidUpdateOnNullish": true,
          },
        },
      },
    },
    "attachTo": undefined,
    "hydrateIn": undefined,
  },
}
`;

exports[`<PictureItem /> renders without crashing 1`] = `
ShallowWrapper {
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <PictureItem
    onSelect={[Function]}
    picture={
        Object {
            "farm": 2,
            "href": "https://www.flickr.com/photos/166588675@N05/44592167171/",
            "id": "44592167171",
            "isfamily": 0,
            "isfriend": 0,
            "ispublic": 1,
            "owner": "166588675@N05",
            "ownername": "OldenCam3",
            "secret": "144e4f8561",
            "server": "1848",
            "src": "https://farm2.staticflickr.com/1848/44592167171_144e4f8561.jpg",
            "tags": "",
            "title": "Olden 3",
          }
    }
/>,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateError": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "host",
    "props": Object {
      "children": Array [
        <div
          className="header"
>
          <div
                    className="title"
          >
                    Olden 3
          </div>
          <div
                    className="description"
          >
                    by 
                    <a
                              href="https://www.flickr.com/photos/166588675@N05/44592167171/"
                              target="_blank"
                    >
                              OldenCam3
                    </a>
          </div>
</div>,
        <ImageLoader
          src="https://farm2.staticflickr.com/1848/44592167171_144e4f8561.jpg"
>
          <PictureItemImage
                    onClick={[Function]}
          />
          <PictureItemImage>
                    Error
          </PictureItemImage>
          <PictureItemImage>
                    <m
                              color="#fff"
                              duration={1.8}
                              size="4"
                    />
          </PictureItemImage>
</ImageLoader>,
      ],
      "className": "container",
    },
    "ref": null,
    "rendered": Array [
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "host",
        "props": Object {
          "children": Array [
            <div
              className="title"
>
              Olden 3
</div>,
            <div
              className="description"
>
              by 
              <a
                            href="https://www.flickr.com/photos/166588675@N05/44592167171/"
                            target="_blank"
              >
                            OldenCam3
              </a>
</div>,
          ],
          "className": "header",
        },
        "ref": null,
        "rendered": Array [
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "children": "Olden 3",
              "className": "title",
            },
            "ref": null,
            "rendered": "Olden 3",
            "type": "div",
          },
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "children": Array [
                "by ",
                <a
                  href="https://www.flickr.com/photos/166588675@N05/44592167171/"
                  target="_blank"
>
                  OldenCam3
</a>,
              ],
              "className": "description",
            },
            "ref": null,
            "rendered": Array [
              "by ",
              Object {
                "instance": null,
                "key": undefined,
                "nodeType": "host",
                "props": Object {
                  "children": "OldenCam3",
                  "href": "https://www.flickr.com/photos/166588675@N05/44592167171/",
                  "target": "_blank",
                },
                "ref": null,
                "rendered": "OldenCam3",
                "type": "a",
              },
            ],
            "type": "div",
          },
        ],
        "type": "div",
      },
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "class",
        "props": Object {
          "children": Array [
            <PictureItemImage
              onClick={[Function]}
/>,
            <PictureItemImage>
              Error
</PictureItemImage>,
            <PictureItemImage>
              <m
                            color="#fff"
                            duration={1.8}
                            size="4"
              />
</PictureItemImage>,
          ],
          "src": "https://farm2.staticflickr.com/1848/44592167171_144e4f8561.jpg",
        },
        "ref": null,
        "rendered": Array [
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "function",
            "props": Object {
              "onClick": [Function],
            },
            "ref": null,
            "rendered": null,
            "type": [Function],
          },
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "function",
            "props": Object {
              "children": "Error",
            },
            "ref": null,
            "rendered": "Error",
            "type": [Function],
          },
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "function",
            "props": Object {
              "children": <m
                color="#fff"
                duration={1.8}
                size="4"
/>,
            },
            "ref": null,
            "rendered": Object {
              "instance": null,
              "key": undefined,
              "nodeType": "function",
              "props": Object {
                "color": "#fff",
                "duration": 1.8,
                "size": "4",
              },
              "ref": null,
              "rendered": null,
              "type": [Function],
            },
            "type": [Function],
          },
        ],
        "type": [Function],
      },
    ],
    "type": "div",
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "host",
      "props": Object {
        "children": Array [
          <div
            className="header"
>
            <div
                        className="title"
            >
                        Olden 3
            </div>
            <div
                        className="description"
            >
                        by 
                        <a
                                    href="https://www.flickr.com/photos/166588675@N05/44592167171/"
                                    target="_blank"
                        >
                                    OldenCam3
                        </a>
            </div>
</div>,
          <ImageLoader
            src="https://farm2.staticflickr.com/1848/44592167171_144e4f8561.jpg"
>
            <PictureItemImage
                        onClick={[Function]}
            />
            <PictureItemImage>
                        Error
            </PictureItemImage>
            <PictureItemImage>
                        <m
                                    color="#fff"
                                    duration={1.8}
                                    size="4"
                        />
            </PictureItemImage>
</ImageLoader>,
        ],
        "className": "container",
      },
      "ref": null,
      "rendered": Array [
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "children": Array [
              <div
                className="title"
>
                Olden 3
</div>,
              <div
                className="description"
>
                by 
                <a
                                href="https://www.flickr.com/photos/166588675@N05/44592167171/"
                                target="_blank"
                >
                                OldenCam3
                </a>
</div>,
            ],
            "className": "header",
          },
          "ref": null,
          "rendered": Array [
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "host",
              "props": Object {
                "children": "Olden 3",
                "className": "title",
              },
              "ref": null,
              "rendered": "Olden 3",
              "type": "div",
            },
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "host",
              "props": Object {
                "children": Array [
                  "by ",
                  <a
                    href="https://www.flickr.com/photos/166588675@N05/44592167171/"
                    target="_blank"
>
                    OldenCam3
</a>,
                ],
                "className": "description",
              },
              "ref": null,
              "rendered": Array [
                "by ",
                Object {
                  "instance": null,
                  "key": undefined,
                  "nodeType": "host",
                  "props": Object {
                    "children": "OldenCam3",
                    "href": "https://www.flickr.com/photos/166588675@N05/44592167171/",
                    "target": "_blank",
                  },
                  "ref": null,
                  "rendered": "OldenCam3",
                  "type": "a",
                },
              ],
              "type": "div",
            },
          ],
          "type": "div",
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "class",
          "props": Object {
            "children": Array [
              <PictureItemImage
                onClick={[Function]}
/>,
              <PictureItemImage>
                Error
</PictureItemImage>,
              <PictureItemImage>
                <m
                                color="#fff"
                                duration={1.8}
                                size="4"
                />
</PictureItemImage>,
            ],
            "src": "https://farm2.staticflickr.com/1848/44592167171_144e4f8561.jpg",
          },
          "ref": null,
          "rendered": Array [
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "function",
              "props": Object {
                "onClick": [Function],
              },
              "ref": null,
              "rendered": null,
              "type": [Function],
            },
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "function",
              "props": Object {
                "children": "Error",
              },
              "ref": null,
              "rendered": "Error",
              "type": [Function],
            },
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "function",
              "props": Object {
                "children": <m
                  color="#fff"
                  duration={1.8}
                  size="4"
/>,
              },
              "ref": null,
              "rendered": Object {
                "instance": null,
                "key": undefined,
                "nodeType": "function",
                "props": Object {
                  "color": "#fff",
                  "duration": 1.8,
                  "size": "4",
                },
                "ref": null,
                "rendered": null,
                "type": [Function],
              },
              "type": [Function],
            },
          ],
          "type": [Function],
        },
      ],
      "type": "div",
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
        "lifecycles": Object {
          "componentDidUpdate": Object {
            "onSetState": true,
          },
          "getDerivedStateFromProps": true,
          "getSnapshotBeforeUpdate": true,
          "setState": Object {
            "skipsComponentDidUpdateOnNullish": true,
          },
        },
      },
    },
    "attachTo": undefined,
    "hydrateIn": undefined,
  },
}
`;
